data/derived/fa15/progs/unify/prog3075.ml.out
Characters 87-100:
  cloneHelper 0 -1*(diff) 
  ^^^^^^^^^^^^^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int
